# docs/swagger.yaml
@@ -18,6 +18,35 @@ definitions:
       updated_at:
         type: string
     type: object
+  dto.AdminUserCreateRequest:
+    properties:
+      admin_role_id:
+        type: integer
+      email:
+        maxLength: 255
+        type: string
+      name:
+        maxLength: 255
+        type: string
+      password:
+        maxLength: 72
+        minLength: 8
+        type: string
+      phone:
+        maxLength: 255
+        type: string
+      username:
+        maxLength: 255
+        minLength: 3
+        type: string
+    required:
+    - admin_role_id
+    - email
+    - name
+    - password
+    - phone
+    - username
+    type: object
   dto.ConfigResponse:
     properties:
       id:
@@ -671,6 +700,42 @@ paths:
       summary: Find a public config by key
       tags:
       - config
+  /user:
+    post:
+      consumes:
+      - application/json
+      description: Create a new admin account with an assigned admin role; the account
+        must rotate its password on first login
+      parameters:
+      - description: Admin User Create Request
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/dto.AdminUserCreateRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.Response'
+            - properties:
+                data:
+                  $ref: '#/definitions/dto.UserResponse'
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.Response'
+      summary: Create an admin user
+      tags:
+      - user
   /user/{id}:
     get:
       consumes:
